turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:4: error: '<-' expected but integer literal found.
for(k 0 <- 2)
      ^Source:28: error: illegal start of simple expression
} 
^