turtleart.lessons.turtleart.Main.HouseThree.scala.code
override def run() {

for(k 0 <- 2)
{
	for(i <- 0 to 3)
	{
	avance(30);
	droite(90);
	}

	avance(30);
	droite(30);
	for(i <- 0 to 2)
	{
	avance(30);
	droite(120);
	}
	leveCrayon();
	gauche(30);
	recule(100);
	droite(90);
	avance(50);
	gauche(90);
	
}
	
}